# boa-constructor

./: .gitignore  About.py  Boa.py  Changes.txt  ClassBrowser.py  Editor.py  EditorUtils.py  ErrorStack.py  ErrorStackFrm.py  FileDlg.py  FindReplaceDlg.py  HTMLCyclops.py  Help.py  ImageStore.py  Inspector.py  KeyDefsDlg.py  LanguageSelectDlg.py  MANIFEST.in  ModRunner.py  PACKAGING.md  Palette.py  PaletteMapping.py  Preferences.py  ProcessProgressDlg.py  README.TXT  README.html  README.md  RTTI.py  RunCyclops.py  Search.py  ShellEditor.py  Utils.py  __version__.py  makepydialog.py  methodparse.py  moduleparse.py  popen2import.py  pyproject.toml  release.ps1  setup.py  (+5 more)
Companions/: BaseCompanions.py  BasicCompanions.py  ButtonCompanions.py  ComCompanions.py  Companions.py  ContainerCompanions.py  LibCompanions.py  ListCompanions.py  PhoenixCompanions.py  WizardCompanions.py
Config/: Explorer.msw.cfg  helpfrm.cfg  prefs_plugins_rc.py
Debugger/: Breakpoint.py  ChildProcessClient.py  ChildProcessServer.py  DebuggerControls.py  IsolatedDebugger.py  RemoteClient.py  RemoteServer.py  sysexcepthook.py  test.py
Examples/: Everything.py
Explorers/: CVSExplorer.py  DAVExplorer.py  Explorer.py  ExplorerNodes.py  FileExplorer.py  PrefsExplorer.py  SSHExplorer.py  ZipExplorer.py
ExternalLib/: BasicAuthTransport.py  ConfigParser.py  Cyclops.py  PythonInterpreter.py  babeliser.py  ddeconn.py  flagart.py  langlistctrl.py  ndiff.py  reindent.py  tarfile.py  wxtools.py  xmlrpclib.py
Models/: CPPSupport.py  ConfigSupport.py  Controllers.py  EditorHelper.py  EditorModels.py  (+7 more)
(+63 files in other folders)
