[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boa-constructor"
dynamic = ["version"]
description = "Boa Constructor IDE modernized for Python 3 and wxPython Phoenix"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "GPL-2.0-or-later"
license-files = ["Docs/gpl.txt"]
authors = [
	{ name = "Boa Constructor contributors" },
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Win32 (MS Windows)",
	"Environment :: X11 Applications",
	"Intended Audience :: Developers",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Integrated Development Environments (IDE)",
	"Topic :: Software Development :: User Interfaces",
]
dependencies = [
	"wxPython>=4.2.2",
]

[project.urls]
Homepage = "https://github.com/ianBBB/boa-constructor"
Source = "https://github.com/ianBBB/boa-constructor"
Issues = "https://github.com/ianBBB/boa-constructor/issues"

[project.scripts]
boa = "Boa:main"

[project.gui-scripts]
boa-gui = "Boa:main"

[tool.setuptools.dynamic]
version = { attr = "__version__.version" }
